--- a/login/torneos/templates/torneos/lista_torneos.html
+++ b/login/torneos/templates/torneos/lista_torneos.html
@@ -1,20 +1,11 @@
-<!-- lista_torneos.html -->
 {% extends 'core/base.html' %}
 
 {% block content %}
-{% load static %}
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Lista de Todos los Torneos</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body class="torneos-page">
-    <h1>Lista de Todos los Torneos</h1>
-    <div class="table-container">
-        <table>
-            <thead>
+<div class="container-fluid">
+    <h1 class="mb-4">Lista de Todos los Torneos</h1>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
                 <tr>
                     <th>Nombre</th>
                     <th>Fecha de inicio</th>
@@ -29,8 +20,8 @@
                 {% endfor %}
             </tbody>
         </table>
-        <a href="{% url 'crear_torneo'%}">Nuevo Torneo</a>
     </div>
-</body>
-</html>
+    <a href="{% url 'crear_torneo' %}" class="btn btn-primary mt-3">Nuevo Torneo</a>
+    <a href="{% url 'dashboard' %}" class="btn btn-link ">Regresar al dashboard</a>
+</div>
 {% endblock %}
