--- a/login/intercambios/templates/intercambios/nuevo_intercambio.html
+++ b/login/intercambios/templates/intercambios/nuevo_intercambio.html
@@ -1,40 +1,25 @@
-<!-- intercambios/templates/intercambios/nuevo_intercambio.html -->
 {% extends 'core/base.html' %}
 
 {% block content %}
-{% load static %}
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Añadir Intercambio</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}"> <!-- Asegúrate de tener el CSS adecuado -->
-</head>
-<body>
-    <div class="form-container add-intercambio-form">
-        <h2>Añadir intercambio</h2>
-        <form method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                {{ form.usuario.label_tag }}
-                {{ form.usuario }}
-            </div>
-            <div class="form-group">
-                {{ form.monto.label_tag }}
-                {{ form.monto }}
-            </div>
-            <div class="form-group">
-                {{ form.articulo.label_tag }}
-                {{ form.articulo }}
-            </div>
-            <button type="submit">Agregar</button>
-        </form>
-        <a href="{% url 'lista_todos_intercambios'%}">Regresar</a>
-    </div>
-</body>
-</html>
-
-
-
+<div class="container-fluid">
+    <h2 class="mb-4">Añadir Intercambio</h2>
+    <form method="post" class="form-container add-intercambio-form">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="{{ form.usuario.id_for_label }}">{{ form.usuario.label }}</label>
+            {{ form.usuario|safe }}
+        </div>
+        <div class="form-group">
+            <label for="{{ form.monto.id_for_label }}">{{ form.monto.label }}</label>
+            {{ form.monto|safe }}
+        </div>
+        <div class="form-group">
+            <label for="{{ form.articulo.id_for_label }}">{{ form.articulo.label }}</label>
+            {{ form.articulo|safe }}
+        </div>
+        <button type="submit" class="btn btn-primary">Agregar</button>
+        
+    <a href="{% url 'lista_todos_intercambios' %}" class="btn btn-secondary mt-3">Regresar</a>
+    </form>
+</div>
 {% endblock %}
