--- a/login/torneos/templates/torneos/detalle_torneo.html
+++ b/login/torneos/templates/torneos/detalle_torneo.html
@@ -10,13 +10,14 @@
     <title>Detalle del Torneo</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
-<body class="torneos-page">
+<body>
+    <div class="container-fluid">
     <h2>Detalles del Torneo: {{ torneo.nombre }}</h2>
     <p>Fecha de inicio: {{ torneo.fecha_inicio }}</p>
     <h3>Participantes</h3>
-    <div class="table-container">
-        <table>
-            <thead>
+    <div class="table-responsive">
+        <table class ="table table-bordered table-hover">
+            <thead class="thead-dark">
                 <tr>
                     <th>Jugador</th>
                     <th>Posición</th>
@@ -40,15 +41,15 @@
             </tbody>
         </table>
         
-        <p>Ganancias del Torneo: {{ ganancias_torneos }}</p>  <!-- Mostrar ganancias_torneos -->
-
+        <p>Ganancias del Torneo: {{ ganancias_torneos }}</p>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">Añadir Inscripción</button>
+            <button type="submit" class="btn btn-secondary mb-3">Añadir Inscripción</button>
         </form>
-        <a href="{% url 'torneo_list'%}">Regresar</a>
+        <a href="{% url 'torneo_list'%}"  class="btn btn-link">Regresar</a>
     </div>
+</div>
 </body>
 </html>
 {% endblock %}
