--- a/login/intercambios/templates/intercambios/nuevo_intercambio.html
+++ b/login/intercambios/templates/intercambios/nuevo_intercambio.html
@@ -2,24 +2,31 @@
 
 {% block content %}
 <div class="container-fluid">
+    {% if messages %}
+        <div class="alert alert-danger" role="alert">
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+        </div>
+    {% endif %}
     <h2 class="mb-4">Añadir Intercambio</h2>
     <form method="post" class="form-container add-intercambio-form">
         {% csrf_token %}
         <div class="form-group">
-            <label for="{{ form.usuario.id_for_label }}">{{ form.usuario.label }}</label>
-            {{ form.usuario|safe }}
+            <label for="{{ form.codigo_usuario.id_for_label }}">{{ form.codigo_usuario.label }}</label>
+            {{ form.codigo_usuario }}
         </div>
         <div class="form-group">
             <label for="{{ form.monto.id_for_label }}">{{ form.monto.label }}</label>
-            {{ form.monto|safe }}
+            {{ form.monto }}
         </div>
         <div class="form-group">
             <label for="{{ form.articulo.id_for_label }}">{{ form.articulo.label }}</label>
-            {{ form.articulo|safe }}
+            {{ form.articulo }}
         </div>
         <button type="submit" class="btn btn-primary">Agregar</button>
         
-    <a href="{% url 'lista_todos_intercambios' %}" class="btn btn-secondary mt-3">Regresar</a>
+        <a href="{% url 'lista_todos_intercambios' %}" class="btn btn-secondary mt-3">Regresar</a>
     </form>
 </div>
 {% endblock %}
